--- a/Process_Application/Forms/(WF_CountersignDialogBox).form
+++ b/Process_Application/Forms/(WF_CountersignDialogBox).form
@@ -2,11 +2,11 @@
 <!DOCTYPE note SYSTEM 'xmlschemas/domino_8_5_3.dtd'>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='8.5' maintenanceversion='3.0'
  replicaid='48257A930001D57A'>
-<noteinfo noteid='1f2' unid='D11495F1B864501F48257AA200131081' sequence='6'>
+<noteinfo noteid='1f2' unid='D11495F1B864501F48257AA200131081' sequence='9'>
 <created><datetime>20121025T112814,09+08</datetime></created>
-<modified><datetime>20121025T154821,74+08</datetime></modified>
-<revised><datetime>20121025T154821,73+08</datetime></revised>
-<lastaccessed><datetime>20121025T154821,74+08</datetime></lastaccessed>
+<modified><datetime>20121026T144706,41+08</datetime></modified>
+<revised><datetime>20121026T144706,38+08</datetime></revised>
+<lastaccessed><datetime>20121026T144706,41+08</datetime></lastaccessed>
 <addedtofile><datetime>20121025T112814,14+08</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=沈少尘 20947/O=siyuan</name></updatedby>
 <wassignedby><name>CN=沈少尘 20947/O=siyuan</name></wassignedby>
@@ -15,41 +15,55 @@
 <rawitemdata type='1'>
 X/8QAAIADwAHAAAAAAAAAA==
 </rawitemdata></item>
+<item name='$TITLE'><text>(WF_CountersignDialogBox)</text></item>
 <item name='$Info' sign='true'>
 <rawitemdata type='1'>
-hhgBAIAAAAAAgAAAAQABAP///wAQAAAA
+hhgHAIAAAAAAgAAAGAABAOfu9QAQAAAA
 </rawitemdata></item>
 <item name='$Flags'><text/></item>
-<item name='$$ScriptName' summary='false' sign='true'><text>RejectionDialogBox</text></item>
-<item name='NextAssignee' placeholder='true'>
-<rawitemdata type='0'>
-</rawitemdata></item>
+<item name='$DesignerVersion'><text>8.5.3</text></item>
+<item name='$$ScriptName' summary='false' sign='true'><text>(WF_CountersignDialogBox)</text></item>
 <item name='Comment' placeholder='true'>
 <rawitemdata type='0'>
 </rawitemdata></item>
-<item name='$Fields'><textlist><text>Comment</text><text>NextAssignee</text></textlist></item>
+<item name='NextAssignee' placeholder='true'>
+<rawitemdata type='0'>
+</rawitemdata></item>
+<item name='$Fields'><textlist><text>NextAssignee</text><text>Comment</text></textlist></item>
 <item name='$Body' sign='true'>
 <rawitemdata type='1'>
 gQKC/1oAAQAAAAAAAAAAAKAFAACgBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAABAAAAAJSHAAAAAAAAAAAAAAAAAQAAAAQAAACDBAEAhf8IAAEAAAqBAoL/WgACAAAA
-AAAAAAAAoAUAAKAFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEA
-AAAAlIUAAAAAoAUIAAAAAAABAAAABAAAAIMEAgDdBgEA+//7/ywAIAAAAAICAAAAAAAAAAAAAAAA
-AADn7vUA9/f3AAEA////AAAAAAAAAFz/PgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAOAAAAAAAAAAEAAAoAAAAAAQAAAAAA/P86AAAAAAABAAEAAQABAAEAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAQDv7+8AAAAAAAAAAAAAAN4GAQD7/6MOoAU5ADwAOQA5AAICpBIAAOgFjQwA
-AKICAiIBAQAAgQKC/1oAAwAAAAAAAAAAAAYGjQwGBgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAIYBAAAAAFSHAAAAAAAAAAAAAAAAAQAAAAQAAACDBAMAhf8UAAEAAAkT
-0aET1PETyMsT1LGkEgAB/wyAHAAAqAIgIgEBAACBAoL/WgAEAAAAAAAAAAAA/wyAHP8MAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhgEAAAAAVIcAAAAAAAAAAAAAAAAB
-AAAABAAAAIMEBACF/wgAAQAACt0GAACK//7/UAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAHgAeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAsP8UAAAAAAAA
-AAAAAQAAAAAAAACK/zAAjgABBQYwAgAAAAAAAAIBAAAJAAAAAAAAAAAMAAAAAABOZXh0QXNzaWdu
-ZWXeBgAAiv+F/wgAAQAACqQSAQDoBY0MAACiAgIiAQEAAIECgwQDAIX/DgABAAAKE9LiE7z7pBIB
-Af8MgBwAAKgCICIBAQAAgQKDBAQAhf8IAAEAAArdBgAAiv/+/1AAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAB4AHgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AIr/LACKAAAFADACAAAAAAAAAgEAAAkAAAAAAAAAAAcAAAAAAENvbW1lbnQAYg4BAIQAAAAAAAAA
-AADeBgAAiv+F/wgAAQAACqUGAAAAAIECgwQCAIX/CAABAAAK
-</rawitemdata></item>
-<item name='$TITLE' sign='true'><text>(WF_CountersignDialogBox)</text></item>
-<item name='$DesignerVersion' sign='true'><text>8.5.3</text></item></note>
+AAAAAAAAAACBAAAAAJWHAAAAAAAAAAAAAAAAAQAAAAYAAACDBAEAhf8IAAEAAAqBAoMEAQDdBgEA
++//7/ywAAAAAAAEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAFz/PgAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOAAAAAAAAAAEAAAoAAAAAAQAAAAAA3gYBAPv/
+ow6gBTkAPAA5ADkAAgCkEgAA2QUTIwAAAAIAAAEBAACBAoL/WgACAAAAAAAAAAAA2QUTI9kFAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhoEAAAAAVYcAAAAAAAAAAAAA
+AAABAAAABgAAAIMEAgCF/wgAAQAACoECgv9aAAMAAAAAAAAAAADZBRMj2QUAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACGgQAAAABVhAAAAAAAAAAAAABkAAEAAAAGAAAA
+gwQDAN0GAQD7//v/LAAhAAAAAgIAAAAAAAAAAAAAxgEAAOfu9QD///8AAQDn7vUAAAAAAAAAXP8+
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA4AAAAAAAAAAQAACgAAAAABAAAA
+AADeBgEA+//PDtkFKAA8AAAAAAADAtASAADZBWUNDR2oIjAzAQEAAIECgv9aAAQAAAAAAAAAAABh
+BmUNYQYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACGAQAAAABUhIgA
+AACIAAAAAAAAAAEAAAAEAAAAgwQEAIX/FAABAAAJE9GhE9TxE8jLE9Sx4gTGAdASAAFlDRMjc1Oi
+IgMzAQEAAIECgv9aAAUAAAAAAAAAAADtDRMj7Q0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAACGAQAAAABUhIgAAACIAAAAAAAAAAEAAAAEAAAAgwQFAIX/CAABAAAK3QYA
+AIr//v9QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAeAB4AAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACw/xQAAAAAAAAAAAABAAAAAAAAAIr/MACOAAEFBjAC
+AAAAAAAAAgEAAAkAAAAAAAAAAAwAAAAAAE5leHRBc3NpZ25lZd4GAACK/4X/CAABAAAK0BIBANkF
+ZQ0NHSgCMAMBAQAAgQKDBAQA3QYAAIX/hf8OAAEB3woT0uITvPvSCAEALy8vAN4GAACF/9ASAQFl
+DRMjc1MiAgMDAQEAAIECgv9aAAYAAAAAAAAAAADtDRMj7Q0AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAACGgQAAAABVhIgAAACIAAAAAAAAAAEAAAAGAAAAgwQGAIX/CAAB
+AAAKgQKC/1oABwAAAAAAAAAAAJINEyOSDQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAIYBAAAAAFSFAAAAAC0AAAAAAAAAAQAAAAQAAACDBAcA3QYBAPv/+/8sAAEAAAAB
+AQAAAAAAAAAAAAClBgAAAAAAAAAAAAABAAAAAAAAAAAAAABc/z4AAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAADgAAAAAAAAABAAAKAAAAAAEAAAAAAN4GAQD7/88Okg0oADwAAAAA
+AAMA0BIAAJINEyOAcAACAAABAQAAgQKC/1oACAAAAAAAAAAAABoOEyMaDgAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIYBAAAAAFSEiAAAAIgAAAAAAAAAAQAAAAQAAACD
+BAgAhf8IAAEAAArdBgAAiv/+/1AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB4
+AHgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIr/LACKAAAFAAACAAAAAAAA
+AgEAAAkAAAAAAAAAAAcAAAAAAENvbW1lbnQAYg4BAIQAAAAAAAAAAADeBgAAiv+F/wgAAQAACuIE
+pQbRBgAAAACBAoMEBgCF/wgAAQAACtEGAAAAAIECgv9aAAkAAQAAAAAAAADZBRMj2QUAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACGAQAAAABUhwAAAAAAAAAAAAAAAAEA
+AAAEAAAAgwQJAIX/CAABAAAKpQYAAAAAgQKDBAEAhf8IAAEAAAo=
+</rawitemdata></item></note>
 
