--- a/Process_Application/Forms/(WF_NextStepDialogbox).form
+++ b/Process_Application/Forms/(WF_NextStepDialogbox).form
@@ -2,11 +2,11 @@
 <!DOCTYPE note SYSTEM 'xmlschemas/domino_8_5_3.dtd'>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='8.5' maintenanceversion='3.0'
  replicaid='48257A930001D57A'>
-<noteinfo noteid='1e2' unid='49122D4BB0A0BE0C48257AA1001F3112' sequence='11'>
+<noteinfo noteid='1e2' unid='49122D4BB0A0BE0C48257AA1001F3112' sequence='59'>
 <created><datetime>20121024T134041,78+08</datetime></created>
-<modified><datetime>20121025T103407,24+08</datetime></modified>
-<revised><datetime>20121025T103407,19+08</datetime></revised>
-<lastaccessed><datetime>20121025T103407,24+08</datetime></lastaccessed>
+<modified><datetime>20121026T113004,60+08</datetime></modified>
+<revised><datetime>20121026T113004,59+08</datetime></revised>
+<lastaccessed><datetime>20121026T113004,60+08</datetime></lastaccessed>
 <addedtofile><datetime>20121024T134042,18+08</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=沈少尘 20947/O=siyuan</name></updatedby>
 <wassignedby><name>CN=沈少尘 20947/O=siyuan</name></wassignedby>
@@ -18,11 +18,27 @@ X/8QAAIADwAHAAAAAAAAAA==
 <item name='$TITLE'><text>(WF_NextStepDialogbox)</text></item>
 <item name='$Info' sign='true'>
 <rawitemdata type='1'>
-hhgBAIAAAAAAgAAAAQABAP///wAQAAAA
+hhgHAIAAAAAAgAAAGAABAOfu9QAQAAAA
 </rawitemdata></item>
 <item name='$Flags'><text/></item>
 <item name='$DesignerVersion'><text>8.5.3</text></item>
-<item name='$$ScriptName' summary='false' sign='true'><text>NextStepDialogbox</text></item>
+<item name='$$Script_O' sign='true'>
+<rawitemdata type='14'>
+AQAAAkxTT0IDABQIZW4AAAQAAAADAAAAAAAEAIgAAAAAAAAAAAAAAAAAAAAkAP//GAA4AP////8A
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAEABQBMb3R1cyBQcm9kdWN0AAAAVjAuMAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAwAAAAAAAAAEAAAAiAAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAA
+AAAAAABXMzJJJQMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAwCMAAAAAABUAAgAKgA2ADYAMgBBADEAMQA4AAAAAABsAAMATgBFAFcAAACAAAYARABFAEwA
+RQBUAEUAAAAAAP//CgBJAE4ASQBUAEkAQQBMAEkAWgBFAAAAAAD//wkAVABFAFIATQBJAE4AQQBU
+AEUAAAD//wYATwBCAEoARQBDAFQAAAAAAP//AAAAAAAABQAIAAAAAADN1wBTBAAHAAAAAAAdAAAC
+AAAACgAAAA==
+</rawitemdata></item>
+<item name='$$ScriptName' summary='false' sign='true'><text>(WF_NextStepDialogbox)</text></item>
 <item name='NextStepSelection' placeholder='true'>
 <rawitemdata type='0'>
 </rawitemdata></item>
@@ -43,36 +59,51 @@ hhgBAIAAAAAAgAAAAQABAP///wAQAAAA
 <item name='$Body' sign='true'>
 <rawitemdata type='1'>
 gQKC/1oAAQAAAAAAAAAAAKAFAACgBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAABAAAAAJSHAAAAAAAAAAAAAAAAAQAAAAQAAACDBAEAhf8IAAEAAAqBAoL/WgACAAAA
-AAAAAAAAoAUAAKAFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEA
-AAAAlIUAAAAAoAUIAAAAAAABAAAABAAAAIMEAgDdBgEA+//7/ywAIAAAAAUCAAAAAAAAAAAAAAAA
-AADn7vUA9/f3AAEA////AAAAAAAAAFz/PgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAOAAAAAAAAAAEAAAoAAAAAAQAAAAAA/P86AAAAAAABAAEAAQABAAEAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAQDv7+8AAAAAAAAAAAAAAN4GAQD7/6MOoAU5ADwAOQA5AAICpBIAAOgFjQwA
-AFEiAREBAQAAgQKC/1oAAwAAAAAAAAAAAPcFjQz3BQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAIYBAAAAAFSHAAAAAAAAAAAAAAAAAQAAAAQAAACDBAMAhf8aAAEAAAkT
-x+sT0aET1PETz8IT0rsTsr2kEgAB/wyAHAAAVCIQEQEBAACBAoL/WgAEAAAAAAAAAAAA/wyAHP8M
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhgEAAAAAVIcAAAAAAAAA
-AAAAAAABAAAABAAAAIMEBACF/wgAAQAACt0GAACK//7/UAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAHgAeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiv82
-AIoAAQUGMAIAAAAAAAACAQAACQAAAAAAAAAAEQAAAAAATmV4dFN0ZXBTZWxlY3Rpb24AYg4BAIQA
-AAAAAAAAAADeBgAAiv+F/wgAAQAACqQSAQDoBY0MAABRAgERAQEAAIECgwQDAIX/EQABAAAJE8/C
-E9K7E7K9AKQSAQH/DIAcAABUAhARAQEAAIECgwQEAIX/CAABAAAK3QYAAIr//v9QAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAeAB4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAACK/ywAigAABQAwAgAAAAAAAAIBAAAJAAAAAAAAAAAIAAAAAABOZXh0U3RlcGIO
-AQCEAAAAAAAAAAAA3gYAAIr/hf8IAAEAAAqkEgIA6AWNDAAAUSIBEQEBAACBAoMEAwCF/xoAAQAA
-CRPH6xPRoRPU8RO0phPA7RPIy6QSAgH/DIAcAABUIhARAQEAAIECgwQEAIX/CAABAAAK3QYAAIr/
-/v9QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAeAB4AAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAACK/zAAigAABQAwAgAAAAAAAAIBAAAJAAAAAAAAAAAMAAAA
-AABOZXh0QXNzaWduZWViDgEAhAAAAAAAAAAAAN4GAACK/4X/CAABAAAKpBIDAOgFjQwAAFEiAREB
-AQAAgQKDBAMAhf8RAAEAAAkTtKYTwO0TyMsApBIDAf8MgBwAAFQiEBEBAQAAgQKDBAQAhf8IAAEA
-AArdBgAAiv/+/1AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB4AHgAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIr/OgCKAAAFADACAAAAAAAAAgEAAAkAAAAA
-AAAAABUAAAAAAE5leHRBc3NpZ25lZVNlbGVjdGlvbgBiDgEAhAAAAAAAAAAAAN4GAACK/4X/CAAB
-AAAKpBIEAOgFjQwAAFECAREBARgAgQKDBAMAhf8OAAEAAAoT0uITvPukEgQB/wyAHAAAVAIQEQEB
-GACBAoMEBACF/wgAAQAACt0GAACK//7/UAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAHgAeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiv8sAIoAAAUAAAIA
-AAAAAAACAQAACQAAAAAAAAAABwAAAAAAQ29tbWVudABiDgEAhAAAAAAAAAAAAN4GAACK/4X/CAAB
-AAAKpQYAAAAAgQKDBAEAhf8IAAEAAAo=
+AAAAAAAAAACBAAAAAJWHAAAAAAAAAAAAAAAAAQAAAAYAAACDBAEAhf8IAAEAAAqBAoMEAQDdBgEA
++//7/ywAAAAAAAEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAFz/PgAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOAAAAAAAAAAEAAAoAAAAAAQAAAAAA3gYBAPv/
+ow6gBTkAPAA5ADkAAgCkEgAA2QUTIwAAAAIAAAEBAACBAoL/WgACAAAAAAAAAAAA2QUTI9kFAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhoEAAAAAVYcAAAAAAAAAAAAA
+AAABAAAABgAAAIMEAgCF/wgAAQAACoECgv9aAAMAAAAAAAAAAADZBRMj2QUAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACGgQAAAABVhAAAAAAAAAAAAABkAAEAAAAGAAAA
+gwQDAN0GAQD7//v/LAAhAAAABQIAAAAAAAAAAAAAxgEAAOfu9QD///8AAQDn7vUAAAAAAAAAXP8+
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA4AAAAAAAAAAQAACgAAAAABAAAA
+AADeBgEA+//PDtkFKAA8AAAAAAADAtASAADZBWUNDR2IIjAwAQEAAIECgv9aAAQAAAAAAAAAAABh
+BmUNYQYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACGAQAAAABUhIgA
+AACIAAAAAAAAAAEAAAAEAAAAgwQEAN0GAACF/4X/GgABAd8JE8frE9GhE9TxE8/CE9K7E7K90ggB
+AC8vLwDeBgAAhf/iBMYB0BIAAWUNEyNzU4IiAzABAQAAgQKC/1oABQAAAAAAAAAAAO0NEyPtDQAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIYBAAAAAFSEiAAAAIgAAAAA
+AAAAAQAAAAQAAACDBAUAhf8IAAEAAArdBgAAiv/+/1AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAB4AHgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIr/NgCK
+AAEFBjACAAAAAAAAAgEAAAkAAAAAAAAAABEAAAAAAE5leHRTdGVwU2VsZWN0aW9uAGIOAQCEAAAA
+AAAAAAAA3gYAAIr/hf8IAAEAAArQEgEA2QVlDQ0dqCIwMwEBAACBAoMEBADdBgAAhf+F/xEAAQHf
+CRPPwhPSuxOyvQDSCAEALy8vAN4GAACF/9ASAQFlDRMjc1OiIgMzAQEAAIECgwQFAIX/CAABAAAK
+3QYAAIr//v9QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAeAB4AAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACK/ywAigAABQAwAgAAAAAAAAIBAAAJAAAAAAAA
+AAAIAAAAAABOZXh0U3RlcGIOAQCEAAAAAAAAAAAA3gYAAIr/hf8IAAEAAArQEgIA2QVlDQ0dqCIw
+MwEBAACBAoMEBADdBgAAhf+F/xoAAQHfCRPH6xPRoRPU8RO0phPA7RPIy9IIAQAvLy8A3gYAAIX/
+0BICAWUNEyNzU6IiAzMBAQAAgQKDBAUAhf8IAAEAAArdBgAAiv/+/1AAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAB4AHgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAIr/MACKAAAFADACAAAAAAAAAgEAAAkAAAAAAAAAAAwAAAAAAE5leHRBc3NpZ25lZWIOAQCE
+AAAAAAAAAAAA3gYAAIr/hf8IAAEAAArQEgMA2QVlDQ0dqCIwMwEBAACBAoMEBADdBgAAhf+F/xEA
+AQHfCRO0phPA7RPIywDSCAEALy8vAN4GAACF/9ASAwFlDRMjc1OiIgMzAQEAAIECgwQFAIX/CAAB
+AAAK3QYAAIr//v9QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAeAB4AAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACK/zoAigAABQAwAgAAAAAAAAIBAAAJAAAA
+AAAAAAAVAAAAAABOZXh0QXNzaWduZWVTZWxlY3Rpb24AYg4BAIQAAAAAAAAAAADeBgAAiv+F/wgA
+AQAACtASBADZBWUNDR0oAjADAQEAAIECgwQEAN0GAACF/4X/DgABAd8KE9LiE7z70ggBAC8vLwDe
+BgAAhf/QEgQBZQ0TI3NTIgIDAwEBAACBAoL/WgAGAAAAAAAAAAAA7Q0TI+0NAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhoEAAAAAVYSIAAAAiAAAAAAAAAABAAAABgAA
+AIMEBgCF/wgAAQAACoECgv9aAAcAAAAAAAAAAACSDRMjkg0AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAACGAQAAAABUhQAAAAAtAAAAAAAAAAEAAAAEAAAAgwQHAN0GAQD7
+//v/LAABAAAAAQEAAAAAAAAAAAAApQYAAAAAAAAAAAAAAQAAAAAAAAAAAAAAXP8+AAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA4AAAAAAAAAAQAACgAAAAABAAAAAADeBgEA+//P
+DpINKAA8AAAAAAADANASAACSDRMjgHAAAgAAAQEAAIECgv9aAAgAAAAAAAAAAAAaDhMjGg4AAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACGAQAAAABUhIgAAACIAAAAAAAA
+AAEAAAAEAAAAgwQIAIX/CAABAAAK3QYAAIr//v9QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAeAB4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACK/ywAigAA
+BQAAAgAAAAAAAAIBAAAJAAAAAAAAAAAHAAAAAABDb21tZW50AGIOAQCEAAAAAAAAAAAA3gYAAIr/
+hf8IAAEAAAriBKUG0QYAAAAAgQKDBAYAhf8IAAEAAArRBgAAAACBAoL/WgAJAAEAAAAAAAAA2QUT
+I9kFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhgEAAAAAVIcAAAAA
+AAAAAAAAAAABAAAABAAAAIMECQCF/wgAAQAACqUGAAAAAIECgwQBAIX/CAABAAAK
 </rawitemdata></item></note>
 
