--- a/Process_Application/Forms/(WF_RejectionDialogBox).form
+++ b/Process_Application/Forms/(WF_RejectionDialogBox).form
@@ -2,11 +2,11 @@
 <!DOCTYPE note SYSTEM 'xmlschemas/domino_8_5_3.dtd'>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='8.5' maintenanceversion='3.0'
  replicaid='48257A930001D57A'>
-<noteinfo noteid='1ee' unid='CAC22DF65A3EB5F848257AA2000B0636' sequence='4'>
+<noteinfo noteid='1ee' unid='CAC22DF65A3EB5F848257AA2000B0636' sequence='7'>
 <created><datetime>20121025T100024,86+08</datetime></created>
-<modified><datetime>20121025T111911,01+08</datetime></modified>
-<revised><datetime>20121025T111911,00+08</datetime></revised>
-<lastaccessed><datetime>20121025T111911,01+08</datetime></lastaccessed>
+<modified><datetime>20121026T144616,76+08</datetime></modified>
+<revised><datetime>20121026T144616,70+08</datetime></revised>
+<lastaccessed><datetime>20121026T144616,76+08</datetime></lastaccessed>
 <addedtofile><datetime>20121025T100025,09+08</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=沈少尘 20947/O=siyuan</name></updatedby>
 <wassignedby><name>CN=沈少尘 20947/O=siyuan</name></wassignedby>
@@ -18,11 +18,11 @@ X/8QAAIADwAHAAAAAAAAAA==
 <item name='$TITLE'><text>(WF_RejectionDialogBox)</text></item>
 <item name='$Info' sign='true'>
 <rawitemdata type='1'>
-hhgBAIAAAAAAgAAAAQABAP///wAQAAAA
+hhgHAIAAAAAAgAAAGAABAOfu9QAQAAAA
 </rawitemdata></item>
 <item name='$Flags'><text/></item>
 <item name='$DesignerVersion'><text>8.5.3</text></item>
-<item name='$$ScriptName' summary='false' sign='true'><text>RejectionDialogBox</text></item>
+<item name='$$ScriptName' summary='false' sign='true'><text>(WF_RejectionDialogBox)</text></item>
 <item name='NextStepSelection' placeholder='true'>
 <rawitemdata type='0'>
 </rawitemdata></item>
@@ -40,31 +40,45 @@ hhgBAIAAAAAAgAAAAQABAP///wAQAAAA
 <item name='$Body' sign='true'>
 <rawitemdata type='1'>
 gQKC/1oAAQAAAAAAAAAAAKAFAACgBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAABAAAAAJSHAAAAAAAAAAAAAAAAAQAAAAQAAACDBAEAhf8IAAEAAAqBAoL/WgACAAAA
-AAAAAAAAoAUAAKAFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEA
-AAAAlIUAAAAAoAUIAAAAAAABAAAABAAAAIMEAgDdBgEA+//7/ywAIAAAAAQCAAAAAAAAAAAAAAAA
-AADn7vUA9/f3AAEA////AAAAAAAAAFz/PgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAOAAAAAAAAAAEAAAoAAAAAAQAAAAAA/P86AAAAAAABAAEAAQABAAEAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAQDv7+8AAAAAAAAAAAAAAN4GAQD7/6MOoAU5ADwAOQA5AAICpBIAAOgFjQwA
-AKIiAiIBAQAAgQKC/1oAAwAAAAAAAAAAAAYGjQwGBgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAIYBAAAAAFSHAAAAAAAAAAAAAAAAAQAAAAQAAACDBAMAhf8aAAEAAAkT
-x+sT0aET1PETsrUTu9gT1sGkEgAB/wyAHAAAqCIgIgEBAACBAoL/WgAEAAAAAAAAAAAA/wyAHP8M
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhgEAAAAAVIcAAAAAAAAA
-AAAAAAABAAAABAAAAIMEBACF/wgAAQAACt0GAACK//7/UAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAHgAeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiv82
-AIoAAQUGMAIAAAAAAAACAQAACQAAAAAAAAAAEQAAAAAATmV4dFN0ZXBTZWxlY3Rpb24AYg4BAIQA
-AAAAAAAAAADeBgAAiv+F/wgAAQAACqQSAQDoBY0MAACiAgIiAQEAAIECgwQDAIX/EQABAAAJE7K1
-E7vYE9bBAKQSAQH/DIAcAACoAiAiAQEAAIECgwQEAIX/CAABAAAK3QYAAIr//v9QAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAeAB4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAACK/ywAigAABQAwAgAAAAAAAAIBAAAJAAAAAAAAAAAIAAAAAABOZXh0U3RlcGIO
-AQCEAAAAAAAAAAAA3gYAAIr/hf8IAAEAAAqkEgIA6AWNDAAAogICIgEBAACBAoMEAwCF/xEAAQAA
-CRO0phPA7RPIywCkEgIB/wyAHAAAqAIgIgEBAACBAoMEBACF/wgAAQAACt0GAACK//7/UAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHgAeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAiv8wAIoAAAUAMAIAAAAAAAACAQAACQAAAAAAAAAADAAAAAAATmV4dEFz
-c2lnbmVlYg4BAIQAAAAAAAAAAADeBgAAiv+F/wgAAQAACqQSAwDoBY0MAACiAgIiAQEAAIECgwQD
-AIX/DgABAAAKE9LiE7z7pBIDAf8MgBwAAKgCICIBAQAAgQKDBAQAhf8IAAEAAArdBgAAiv/+/1AA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB4AHgAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAIr/LACKAAAFADACAAAAAAAAAgEAAAkAAAAAAAAAAAcAAAAAAENv
-bW1lbnQAYg4BAIQAAAAAAAAAAADeBgAAiv+F/wgAAQAACqUGAAAAAIECgwQCAIX/CAABAAAK
+AAAAAAAAAACBAAAAAJWHAAAAAAAAAAAAAAAAAQAAAAYAAACDBAEAhf8IAAEAAAqBAoMEAQDdBgEA
++//7/ywAAAAAAAEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAFz/PgAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOAAAAAAAAAAEAAAoAAAAAAQAAAAAA3gYBAPv/
+ow6gBTkAPAA5ADkAAgCkEgAA2QUTIwAAAAIAAAEBAACBAoL/WgACAAAAAAAAAAAA2QUTI9kFAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhoEAAAAAVYcAAAAAAAAAAAAA
+AAABAAAABgAAAIMEAgCF/wgAAQAACoECgv9aAAMAAAAAAAAAAADZBRMj2QUAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACGgQAAAABVhAAAAAAAAAAAAABkAAEAAAAGAAAA
+gwQDAN0GAQD7//v/LAAhAAAABAIAAAAAAAAAAAAAxgEAAOfu9QD///8AAQDn7vUAAAAAAAAAXP8+
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA4AAAAAAAAAAQAACgAAAAABAAAA
+AADeBgEA+//PDtkFKAA8AAAAAAADAtASAADZBWUNDR2IIjAwAQEAAIECgv9aAAQAAAAAAAAAAABh
+BmUNYQYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACGAQAAAABUhIgA
+AACIAAAAAAAAAAEAAAAEAAAAgwQEAIX/GgABAQAJE8frE9GhE9TxE7K1E7vYE9bB4gTGAdASAAFl
+DRMjc1OCIgMwAQEAAIECgv9aAAUAAAAAAAAAAADtDRMj7Q0AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAACGAQAAAABUhIgAAACIAAAAAAAAAAEAAAAEAAAAgwQFAIX/CAAB
+AAAK3QYAAIr//v9QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAeAB4AAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACK/zYAigABBQYwAgAAAAAAAAIBAAAJAAAA
+AAAAAAARAAAAAABOZXh0U3RlcFNlbGVjdGlvbgBiDgEAhAAAAAAAAAAAAN4GAACK/4X/CAABAAAK
+0BIBANkFZQ0NHagiMDMBAQAAgQKDBAQAhf8RAAEBAAkTsrUTu9gT1sEA0BIBAWUNEyNzU6IiAzMB
+AQAAgQKDBAUAhf8IAAEAAArdBgAAiv/+/1AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAB4AHgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIr/LACKAAAFADAC
+AAAAAAAAAgEAAAkAAAAAAAAAAAgAAAAAAE5leHRTdGVwYg4BAIQAAAAAAAAAAADeBgAAiv+F/wgA
+AQAACtASAgDZBWUNDR2oIjAzAQEAAIECgwQEAIX/EQABAQAJE7SmE8DtE8jLANASAgFlDRMjc1Oi
+IgMzAQEAAIECgwQFAIX/CAABAAAK3QYAAIr//v9QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAeAB4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACK/zAAigAA
+BQAwAgAAAAAAAAIBAAAJAAAAAAAAAAAMAAAAAABOZXh0QXNzaWduZWViDgEAhAAAAAAAAAAAAN4G
+AACK/4X/CAABAAAK0BIDANkFZQ0NHSgCMAMBAQAAgQKDBAQA3QYAAIX/hf8OAAEB3woT0uITvPvS
+CAEALy8vAN4GAACF/9ASAwFlDRMjc1MiAgMDAQEAAIECgv9aAAYAAAAAAAAAAADtDRMj7Q0AAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACGgQAAAABVhIgAAACIAAAAAAAA
+AAEAAAAGAAAAgwQGAIX/CAABAAAKgQKC/1oABwAAAAAAAAAAAJINEyOSDQAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIYBAAAAAFSFAAAAAC0AAAAAAAAAAQAAAAQAAACD
+BAcA3QYBAPv/+/8sAAEAAAABAQAAAAAAAAAAAAClBgAAAAAAAAAAAAABAAAAAAAAAAAAAABc/z4A
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADgAAAAAAAAABAAAKAAAAAAEAAAAA
+AN4GAQD7/88Okg0oADwAAAAAAAMA0BIAAJINEyOAcAACAAABAQAAgQKC/1oACAAAAAAAAAAAABoO
+EyMaDgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIYBAAAAAFSEiAAA
+AIgAAAAAAAAAAQAAAAQAAACDBAgAhf8IAAEAAArdBgAAiv/+/1AAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAB4AHgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AIr/LACKAAAFAAACAAAAAAAAAgEAAAkAAAAAAAAAAAcAAAAAAENvbW1lbnQAYg4BAIQAAAAAAAAA
+AADeBgAAiv+F/wgAAQAACuIEpQbRBgAAAACBAoMEBgCF/wgAAQAACtEGAAAAAIECgv9aAAkAAQAA
+AAAAAADZBRMj2QUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACGAQAA
+AABUhwAAAAAAAAAAAAAAAAEAAAAEAAAAgwQJAIX/CAABAAAKpQYAAAAAgQKDBAEAhf8IAAEAAAo=
 </rawitemdata></item></note>
 
