--- a/Process_Application/Forms/(WF_CommentDialogBox).form
+++ b/Process_Application/Forms/(WF_CommentDialogBox).form
@@ -2,11 +2,11 @@
 <!DOCTYPE note SYSTEM 'xmlschemas/domino_8_5_3.dtd'>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='8.5' maintenanceversion='3.0'
  replicaid='48257A930001D57A'>
-<noteinfo noteid='1f6' unid='835EEF6CDE509BF048257AA2002AD61B' sequence='3'>
+<noteinfo noteid='1f6' unid='835EEF6CDE509BF048257AA2002AD61B' sequence='6'>
 <created><datetime>20121025T154753,23+08</datetime></created>
-<modified><datetime>20121025T154834,70+08</datetime></modified>
-<revised><datetime>20121025T154834,69+08</datetime></revised>
-<lastaccessed><datetime>20121025T154834,70+08</datetime></lastaccessed>
+<modified><datetime>20121026T144746,23+08</datetime></modified>
+<revised><datetime>20121026T144746,16+08</datetime></revised>
+<lastaccessed><datetime>20121026T144746,23+08</datetime></lastaccessed>
 <addedtofile><datetime>20121025T154753,24+08</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=沈少尘 20947/O=siyuan</name></updatedby>
 <wassignedby><name>CN=沈少尘 20947/O=siyuan</name></wassignedby>
@@ -18,31 +18,43 @@ X/8QAAIADwAHAAAAAAAAAA==
 <item name='$TITLE'><text>(WF_CommentDialogBox)</text></item>
 <item name='$Info' sign='true'>
 <rawitemdata type='1'>
-hhgBAIAAAAAAgAAAAQABAP///wAQAAAA
+hhgHAIAAAAAAgAAAGAABAOfu9QAQAAAA
 </rawitemdata></item>
 <item name='$Flags'><text/></item>
 <item name='$DesignerVersion'><text>8.5.3</text></item>
-<item name='$$ScriptName' summary='false' sign='true'><text>RejectionDialogBox</text></item>
-<item name='Comment' placeholder='true'>
+<item name='$$ScriptName' summary='false' sign='true'><text>(WF_CommentDialogBox)</text></item>
+<item name='Comment_1' placeholder='true'>
 <rawitemdata type='0'>
 </rawitemdata></item>
-<item name='$Fields'><text>Comment</text></item>
+<item name='$Fields'><text>Comment_1</text></item>
 <item name='$Body' sign='true'>
 <rawitemdata type='1'>
 gQKC/1oAAQAAAAAAAAAAAKAFAACgBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAABAAAAAJSHAAAAAAAAAAAAAAAAAQAAAAQAAACDBAEAhf8IAAEAAAqBAoL/WgACAAAA
-AAAAAAAAoAUAAKAFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEA
-AAAAlIUAAAAAoAUIAAAAAAABAAAABAAAAIMEAgDdBgEA+//7/ywAIAAAAAECAAAAAAAAAAAAAAAA
-AADn7vUA9/f3AAEA////AAAAAAAAAFz/PgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAOAAAAAAAAAAEAAAoAAAAAAQAAAAAA/P86AAAAAAABAAEAAQABAAEAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAQDv7+8AAAAAAAAAAAAAAN4GAQD7/6MOoAU5ADwAOQA5AAICpBIAAOgFjQwA
-AKICAiIBAQAAgQKC/1oAAwAAAAAAAAAAAAYGjQwGBgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAIYBAAAAAFSHAAAAAAAAAAAAAAAAAQAAAAQAAACDBAMAhf8OAAEAAAoT
-0uITvPukEgAB/wyAHAAAqAIgIgEBAACBAoL/WgAEAAAAAAAAAAAA/wyAHP8MAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhgEAAAAAVIcAAAAAAAAAAAAAAAABAAAABAAA
-AIMEBACF/wgAAQAACt0GAACK//7/UAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AHgAeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiv8sAIoAAAUAMAIAAAAA
-AAACAQAACQAAAAAAAAAABwAAAAAAQ29tbWVudABiDgEAhAAAAAAAAAAAAN4GAACK/4X/CAABAAAK
-pQYAAAAAgQKDBAIAhf8IAAEAAAo=
+AAAAAAAAAACBAAAAAJWHAAAAAAAAAAAAAAAAAQAAAAYAAACDBAEAhf8IAAEAAAqBAoMEAQDdBgEA
++//7/ywAAAAAAAEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAFz/PgAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOAAAAAAAAAAEAAAoAAAAAAQAAAAAA3gYBAPv/
+ow6gBTkAPAA5ADkAAgCkEgAA2QUTIwAAAAIAAAEBAACBAoL/WgACAAAAAAAAAAAA2QUTI9kFAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhoEAAAAAVYcAAAAAAAAAAAAA
+AAABAAAABgAAAIMEAgCF/wgAAQAACoECgv9aAAMAAAAAAAAAAADZBRMj2QUAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACGgQAAAABVhAAAAAAAAAAAAABkAAEAAAAGAAAA
+gwQDAN0GAQD7//v/LAAhAAAAAQIAAAAAAAAAAAAAxgEAAOfu9QD///8AAQDn7vUAAAAAAAAAXP8+
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA4AAAAAAAAAAQAACgAAAAABAAAA
+AADeBgEA+//PDtkFKAA8AAAAAAADAtASAADZBWUNDR0oAjADAQEAAIECgv9aAAQAAAAAAAAAAABh
+BmUNYQYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACGAQAAAABUhIgA
+AACIAAAAAAAAAAEAAAAEAAAAgwQEAN0GAACF/4X/DgABAd8KE9LiE7z70ggBAC8vLwDeBgAAhf/i
+BMYB0BIAAWUNEyNzUyICAwMBAQAAgQKC/1oABQAAAAAAAAAAAO0NEyPtDQAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIaBAAAAAFWEiAAAAIgAAAAAAAAAAQAAAAYAAACD
+BAUAhf8IAAEAAAqBAoL/WgAGAAAAAAAAAAAAkg0TI5INAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAhgEAAAAAVIUAAAAALQAAAAAAAAABAAAABAAAAIMEBgDdBgEA+//7
+/ywAAQAAAAEBAAAAAAAAAAAAAKUGAAAAAAAAAAAAAAEAAAAAAAAAAAAAAFz/PgAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOAAAAAAAAAAEAAAoAAAAAAQAAAAAA3gYBAPv/zw6S
+DSgAPAAAAAAAAwDQEgAAkg0TI4BwAAIAAAEBAACBAoL/WgAHAAAAAAAAAAAAGg4TIxoOAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhgEAAAAAVISIAAAAiAAAAAAAAAAB
+AAAABAAAAIMEBwCF/wgAAQAACt0GAACK//7/UAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAHgAeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiv8uAIoAAAUA
+AAIAAAAAAAACAQAACQAAAAAAAAAACQAAAAAAQ29tbWVudF8xAGIOAQCEAAAAAAAAAAAA3gYAAIr/
+hf8IAAEAAAriBKUG0QYAAAAAgQKDBAUAhf8IAAEAAArRBgAAAACBAoL/WgAIAAEAAAAAAAAA2QUT
+I9kFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhgEAAAAAVIcAAAAA
+AAAAAAAAAAABAAAABAAAAIMECACF/wgAAQAACqUGAAAAAIECgwQBAIX/CAABAAAK
 </rawitemdata></item></note>
 
