--- a/Process_Application/Pages/(WF_Background).page
+++ b/Process_Application/Pages/(WF_Background).page
@@ -2,11 +2,11 @@
 <!DOCTYPE note SYSTEM 'xmlschemas/domino_8_5_3.dtd'>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='8.5' maintenanceversion='3.0'
  replicaid='48257A930001D57A'>
-<noteinfo noteid='16e' unid='B92D3F91F45882FA48257A930004D968' sequence='2'>
+<noteinfo noteid='16e' unid='B92D3F91F45882FA48257A930004D968' sequence='4'>
 <created><datetime>20121010T085258,00+08</datetime></created>
-<modified><datetime>20121010T085304,36+08</datetime></modified>
-<revised><datetime>20121010T085304,35+08</datetime></revised>
-<lastaccessed><datetime>20121010T085304,36+08</datetime></lastaccessed>
+<modified><datetime>20121026T093426,62+08</datetime></modified>
+<revised><datetime>20121026T093426,61+08</datetime></revised>
+<lastaccessed><datetime>20121026T093426,62+08</datetime></lastaccessed>
 <addedtofile><datetime>20121010T085300,36+08</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=沈少尘 20947/O=siyuan</name></updatedby>
 <wassignedby><name>CN=沈少尘 20947/O=siyuan</name></wassignedby>
@@ -26,11 +26,11 @@ X/8QAAIADwAHAAAAAAAAAA==
 hhgBAIAAAAAAAAAAAQABAP///wAQAAAA
 </rawitemdata></item>
 <item name='$DesignerVersion'><text>7</text></item>
+<item name='$Flags'><text>C34WQ</text></item>
 <item name='$$ScriptName' summary='false' sign='true'><text>(WF_Background)</text></item>
 <item name='$Body' sign='true'>
 <rawitemdata type='1'>
 gQKC/1oAAQAAAAAAAAAAAKAFAACgBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAABAAAAAJSHAAAAAAAAAAAAAAAAAQAAAAQAAACDBAEAhf8IAAEAAAo=
-</rawitemdata></item>
-<item name='$Flags'><text>C34WQ</text></item></note>
+</rawitemdata></item></note>
 
