--- a/Process_Application/Pages/(WF_Head).page
+++ b/Process_Application/Pages/(WF_Head).page
@@ -2,11 +2,11 @@
 <!DOCTYPE note SYSTEM 'xmlschemas/domino_8_5_3.dtd'>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='8.5' maintenanceversion='3.0'
  replicaid='48257A930001D57A'>
-<noteinfo noteid='172' unid='553D17D1F057EAEB48257A930004D969' sequence='2'>
+<noteinfo noteid='172' unid='553D17D1F057EAEB48257A930004D969' sequence='4'>
 <created><datetime>20121010T085258,01+08</datetime></created>
-<modified><datetime>20121010T085306,36+08</datetime></modified>
-<revised><datetime>20121010T085306,35+08</datetime></revised>
-<lastaccessed><datetime>20121010T085306,36+08</datetime></lastaccessed>
+<modified><datetime>20121026T093426,71+08</datetime></modified>
+<revised><datetime>20121026T093426,70+08</datetime></revised>
+<lastaccessed><datetime>20121026T093426,71+08</datetime></lastaccessed>
 <addedtofile><datetime>20121010T085300,38+08</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=沈少尘 20947/O=siyuan</name></updatedby>
 <wassignedby><name>CN=沈少尘 20947/O=siyuan</name></wassignedby>
@@ -45,11 +45,11 @@ vRwBAAAAAQAAAAAAJSAAAAAAAAABAM8JGAACAL7/MAAAAAEAAACfAZAAGgAAAAAAAABEQlRJdGxl
 XERhdGFiYXNlIE5hdmlnYXRvcr7/GgAAAAEAAACfARABBAAAAAAAAABVc2Vyvv8cAAAAAQAAAJ8B
 EAEGAAAAAAAAAHNlcnZlcg==
 </rawitemdata></item>
+<item name='$Flags'><text>C34WQ</text></item>
 <item name='$$ScriptName' summary='false' sign='true'><text>(WF_Head)</text></item>
 <item name='$Body' sign='true'>
 <rawitemdata type='1'>
 gQKC/1oAAQAAAAAAAAAAAKAFAACgBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAABAAAAAJSHAAAAAAAAAAAAAAAAAQAAAAQAAACDBAEAhf8IAAEAAAo=
-</rawitemdata></item>
-<item name='$Flags'><text>C34WQ</text></item></note>
+</rawitemdata></item></note>
 
